Avoid line wrapping individual footer links

--- a/src/main/content/_assets/css/openliberty.css
+++ b/src/main/content/_assets/css/openliberty.css
@@ -500,6 +500,7 @@ nav .container-fluid {
     font-size: 14px;
     transition: color .2s;
     margin-right: 29px;
+    white-space: nowrap;
 }
 
 #footer_container .left_footer_link {
